--- a/main.html
+++ b/main.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href = "style.css">
     <title>Document</title>
 </head>
 <body>
-    <input type="text" class="textbox">
-    <button>Найти аватар</button>
+
+    <container>
+        <header>
+            Type a nickname and observe all the information you need
+        </header>
+    </container>
+
+    <container>
+        <img id="avatar">
+        <input type="text" class="textbox">
+        <button>Search</button>
+    </container>
+
     <script src="./script.js"></script>
 </body>
 </html>
