--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         </div>
     </div>
 
+    <div class="line"></div>
+
     <div class="container">
 
         <div class="header2">
@@ -28,7 +30,9 @@
         <div class="segment">
             <button>Искать</button>
         </div>
+    </div>
 
+    <div class="container">
         <div>
             <img id="avatar">
         </div>
