--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "styles/style.css">
-    <title>Document</title>
+    <title>GitHub-Analyser</title>
 </head>
 <body>
 
     <div class="container">
         <div class="header">
-            Анализ пользователя GitHub по никнейму
+            Анализ пользователя GitHub
         </div>
     </div>
 
     <div class="line"></div>
 
     <div class="container">
-
         <div class="header2">
             Введите никнейм пользователя
         </div>
@@ -35,9 +34,10 @@
     <div class="container">
         <div>
             <img id="avatar">
+            bvx
         </div>
     </div>
 
-    <script src="scripts/script.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
